--- a/app/src/main/res/layout/fragment_registracija.xml
+++ b/app/src/main/res/layout/fragment_registracija.xml
@@ -51,10 +51,42 @@
         android:id="@+id/baigti_mygtukas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Slapyvardis_field"
+        android:layout_below="@+id/slaptazodis"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="20dp"
         android:onClick="Registruotis"
         android:text="@string/reg_mpatv"
         android:textSize="36sp" />
+
+    <TextView
+        android:text="slaptazodis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/slaptazodis"
+        android:textSize="24sp"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Slapyvardis_field"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        android:id="@+id/textView"
+        android:textSize="24sp" />
+
+    <Button
+        android:text="Prisijungti"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="31dp"
+        android:id="@+id/button"
+        android:textSize="24sp"
+        android:layout_below="@+id/baigti_mygtukas"
+        android:layout_centerHorizontal="true"
+        android:onClick="prisijungimas" />
+
 </RelativeLayout>
